[package]
name = "FlappyGina"
version = "0.1.0"
authors = ["RuiArmada <aepb.rui.98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.0-rc.2"
cgmath = { version = "0.17", features = ["mint"]}
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
noise = "0.5.1"
rand = "0.6.5"